2003-06-05  hgg <hgreig@bigpond.net.au>
		
		Update for 0.0.7

2003-05-28  hgg <hgreig@bigpond.net.au>
 
		Updated DEPENDS to reflect easysock's absorption into libggz

2002-11-29  Eric Sandall <eric@sandall.us>

		Created spell
