@@ -1,3 +1,9 @@
+2003-06-07  hgg <hgreig@bigpond.net.au>
+
+		Add ggzdb-db4.c version 1.3 from cvs
+
+		Add BUILD file
+
 2003-06-05  hgg <hgreig@bigpond.net.au>
 		
 		Update for 0.0.7
